
Version 0.4.1 - ??
- WFPassword now has support for a companion "confirm password" field.
- Page widget properties may now use PHP constants via this syntax: "#constant#ClassName::CONSTANT" or "#constant#MY_DEFINED_CONSTANT"
- [BC-break] Changed the default HTTP method to POST on all WFRPC calls. It is a safer default (less prone to URL limitations).

Version 0.4.0 - 4/26/2011
- [improved] Refactored WFErrorArray and WFErrorsException to implement a new interface WFErrorCollection.
- [new] Phocoa now includes a PropelException subclass WFPropelException to allow you to play nice with propel nested transactions while still supporting phocoa model error reporting.
- [new] Add WFDecorator support to KVC. You can now use the [WFDecorator] syntax inside of KVC keyPaths to auto-wrap objects in decorators. Works on arrays as well.
        Example: "tour.customer[MyCustomerDecorator].decoratorGetter"
        Example: "tour.customers[MyCustomerDecorator].decoratorGetter"
- [bugfix] WFSubmit.duplicateSubmitMessage now successfully prevents duplicate submission of AJAX forms.
- [bugfix] WFSearchField detection of return key was not reliable and caused unexpected errors and/or submits in some browsers. Has been fixed now to better detect return key.
- [improved] Vastly improved the PhocoaControllerTestCase_PHPUnit to allow testing of redirect exceptions, form submissions, $_REQUEST data, responseTemplate used, or page output.
             Refactored to a fluent interface as well.
             Examples:
                  setInvocationPath($invocationPath)
                  setModuleData($moduleData)
                  setRequestData($data)
                  setFormData($formId, $formData, $formSubmitButton = NULL)
                  setExpectRedirectException($url, $class = 'WFRedirectRequestException')